--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <label for="">Mortgage Amount</label>
           <div class="campoModificado colorInput">
             <span class="simbolo" id="">$</span>
-            <input type="number" id="amount" class="form colorInput" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
+            <input type="number" id="amount" class="campoModificado form colorInput" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
           </div>
         </div>
         <div class="partDeskot">
@@ -39,7 +39,7 @@
             <label for="">Mortgage Term</label>
             <div class="campoModificado colorInput">
               <input type="number" id="term" class="campoModificado " placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2">
-              <span class="simbolo" id="">years</span>
+              <span class="simbolo simboloEspecifico" id="">years</span>
             </div>
           </div>
     
@@ -47,7 +47,7 @@
             <label for="">Interest Rate</label>
             <div class="campoModificado colorInput">
               <input type="number" id="cup" class="campoModificado" placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2">
-              <span class="simbolo" id="basic-addon2">%</span>
+              <span class="simbolo simboloEspecifico" id="basic-addon2">%</span>
             </div>
           </div>
         </div>
