Actualizando mi codigo

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         
         <div class="section2">
           <label for="">Mortgage Amount</label>
-          <div class="campoModificado colorInput">
-            <span class="simbolo" id="">$</span>
+          <div class="campoModificado colorInput" id="inputStyleJs0">
+            <span class="simbolo" id="mensajewww">$</span>
             <input type="number" id="amount" class="campoModificado form colorInput" placeholder="" aria-label="Username" aria-describedby="basic-addon1">
           </div>
         </div>
         <div class="partDeskot">
-          <div class="section3 ">
+          <div class="section3">
             <label for="">Mortgage Term</label>
-            <div class="campoModificado colorInput">
+            <div class="campoModificado colorInput" id="inputStyleJs1">
               <input type="number" id="term" class="campoModificado " placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2">
               <span class="simbolo simboloEspecifico" id="">years</span>
             </div>
@@ -45,7 +45,7 @@
     
           <div class="section4">
             <label for="">Interest Rate</label>
-            <div class="campoModificado colorInput">
+            <div class="campoModificado colorInput" id="inputStyleJs2">
               <input type="number" id="cup" class="campoModificado" placeholder="" aria-label="Recipient's username" aria-describedby="basic-addon2">
               <span class="simbolo simboloEspecifico" id="basic-addon2">%</span>
             </div>
